--- a/DOM-JS/HTML/img_loop.html
+++ b/DOM-JS/HTML/img_loop.html
@@ -30,5 +30,10 @@
       <button class="prev">←</button>
       <button class="next">→</button>
     </div>
+
+    <div class="palyer">
+      <button class="stop">하울의(멈추기)</button>
+      <button class="play">움~쥑이는 성(자동실행)</button>
+    </div>
   </body>
 </html>
