이미지 변경, 캐러셀 시간 변경

--- a/DOM-JS/HTML/img_loop.html
+++ b/DOM-JS/HTML/img_loop.html
@@ -32,8 +32,8 @@
     </div>
 
     <div class="palyer">
-      <button class="stop">하울의(멈추기)</button>
-      <button class="play">움~쥑이는 성(자동실행)</button>
+      <button class="stop">STOP</button>
+      <button class="play">PLAY</button>
     </div>
   </body>
 </html>
